Fixing controller params