@@ -64,15 +64,6 @@ java {
     sourceCompatibility = JavaVersion.toVersion('11')
     targetCompatibility = JavaVersion.toVersion('11')
 }
-//tasks.withType(JavaCompile) {
-//    options.compilerArgs += "--enable-preview"
-//}
-//tasks.withType(Test) {
-//    jvmArgs += "--enable-preview"
-//}
-//tasks.withType(JavaExec) {
-//    jvmArgs += "--enable-preview"
-//}
 nativeImage {
     args('--verbose')
     imageName('campaigns-data-svc')
